fix modal on mobile

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1065,6 +1065,9 @@ ol ul {
   #reCaptcha {
     margin-left: -20px;
   }
+  .modal {
+    width: 302px;
+  }
 }
 
 @media (max-width: 860px) {
